# multifile-markdown-mcp

./: .dockerignore  .env.example  README.md  pyproject.toml
config/: settings.py
docker/: Dockerfile  docker-compose.file-only.yml  docker-compose.remote-test.yml  docker-compose.yml
docker/postgres/: init.sql
memory_files/: main.md
scripts/: init_memory_structure.py  test_library.sh  test_library_manual.py
src/: __init__.py  library.py  main.py  main_http.py
src/database/: connection.py  repository.py  schema.py
src/embeddings/: base.py  cohere_provider.py  factory.py  huggingface_provider.py  litellm_provider.py  ollama_provider.py  openai_provider.py
src/mcp/: prompts.py  tools.py  tools_unified.py
src/models/: chunk.py  memory.py  search.py
src/search/: chunking.py  hybrid_search.py
src/storage/: file_manager.py  index_structure.py
src/sync/: sync_service.py
src/utils/: file_editor.py
tests/: test_docker_file_only.py  test_docker_langchain_integration.py  test_file_only_mode.py  test_library.py  test_llm_agent_integration.py  test_remote_mcp_langchain.py  test_unified_tools.py
